Реализованно отображение списка задач. Генерация id. Добавление новой таски

--- a/tasks.json
+++ b/tasks.json
@@ -1,9 +1,30 @@
 [
  {
-  "Id": 1,
-  "Status": "Ivanova",
-  "Title": "Mariya",
-  "Description":"test" ,
-  "Date":"31.07.2022"
+  "Id": 100,
+  "Status": "new",
+  "Title": "test1",
+  "Description": "win",
+  "Date": "1.8.2022"
+ },
+ {
+  "Id": 100,
+  "Status": "new",
+  "Title": "test2",
+  "Description": "win1",
+  "Date": "1.8.2022"
+ },
+ {
+  "Id": 2080,
+  "Status": "new",
+  "Title": "еуые3",
+  "Description": "ссыс",
+  "Date": "1 August 2022"
+ },
+ {
+  "Id": 2087,
+  "Status": "new",
+  "Title": "ячся",
+  "Description": "ывывфв",
+  "Date": "1 August 2022"
  }
 ]
