--- a/tasks.json
+++ b/tasks.json
@@ -1,30 +1,9 @@
 [
  {
-  "Id": 100,
+  "Id": 2082,
   "Status": "new",
-  "Title": "test1",
-  "Description": "win",
-  "Date": "1.8.2022"
- },
- {
-  "Id": 100,
-  "Status": "new",
-  "Title": "test2",
-  "Description": "win1",
-  "Date": "1.8.2022"
- },
- {
-  "Id": 2080,
-  "Status": "new",
-  "Title": "еуые3",
-  "Description": "ссыс",
-  "Date": "1 August 2022"
- },
- {
-  "Id": 2087,
-  "Status": "new",
-  "Title": "ячся",
-  "Description": "ывывфв",
-  "Date": "1 August 2022"
+  "Title": "task 1",
+  "Description": "Бла бла бла",
+  "Date": "2 August 2022"
  }
 ]
